--- a/css/template.css
+++ b/css/template.css
@@ -163,3 +163,13 @@ body {
     -webkit-animation: text-pop-up-top 3s ease-out forwards;
   }
   
+
+    /* ========================================
+     Mobile Alterations
+  ======================================== */
+  @media (max-width: 768px) {
+    body::before {
+      background-attachment: scroll !important;
+      position: absolute !important;
+    }
+  }
